[tool.poetry]
name = "solana-pay-py"
version = "0.1.0"
description = ""
authors = ["itayb1 <itay4445@gmail.com>"]
packages = [
    { include = "solana_pay", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
solana = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
