[tool.poetry]
name = "solana-pay-py"
version = "0.1.0"
description = ""
authors = ["itayb1 <itay4445@gmail.com>"]
packages = [
    { include = "solana_pay", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8.2"
solana = "^0.21.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
